...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Contact" largeTitleDisplayMode="always" id="Hm4-Z4-wLo">
                        <barButtonItem key="leftBarButtonItem" title="Groups" id="WMc-FO-qQo">
                            <color key="tintColor" red="0.31570082900000002" green="0.89064073560000001" blue="0.76005297900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <color key="tintColor" red="0.31570082902908325" green="0.8906407356262207" blue="0.76005297899246216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Add"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                                    <rect key="frame" x="16" y="10" width="366" height="35.5"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mobile" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sUe-dg-R4W">
                                                            <rect key="frame" x="0.0" y="0.0" width="70" height="35.5"/>
                                                            <constraints>
...
                                                    <rect key="frame" x="16" y="10" width="366" height="35.5"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOk-4o-Bi6">
                                                            <rect key="frame" x="0.0" y="0.0" width="70" height="35.5"/>
                                                            <constraints>
...
                                                    <rect key="frame" x="24" y="22" width="370" height="22"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWp-Rw-btd">
                                                            <rect key="frame" x="0.0" y="0.0" width="90" height="22"/>
                                                            <constraints>
...
                                                    <rect key="frame" x="24" y="22" width="370" height="22"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UlZ-Mj-DtS">
                                                            <rect key="frame" x="0.0" y="0.0" width="90" height="22"/>
                                                            <constraints>
...
