...
import UIKit

extension UIViewController {
    func showAlert(title: String?, message: String?) {
        DispatchQueue.main.async {
            let controller = UIAlertController(title: title, message: message, preferredStyle: .alert)
            controller.addAction(UIAlertAction(title: "Ok", style: .default, handler: nil))
            self.present(controller, animated: true, completion: nil)
        }
        
    }
    func showAlert(title: String?, action: UIAlertAction, message: String?) {
        DispatchQueue.main.async {
...
